[build-system]
requires = ["setuptools>=61.0.0", "wheel"]

build-backend = "setuptools.build_meta"

[project]
name = "teleosinter"

version = "05.05.2024"

requires-python = ">=3.12.0"

package_dir = "src"

zip_safe = "no"

description = """
Osint tool for finding information about different persons.
This tool uses other ready-made projects.
"""

readme = "README.md"

license = {file = "LICENSE"}

keywords = ["osint", "search-info-person"]

authors = [
    {name = "Danil Kovalev"},
    {name = "Ivan Zabolotniy"}
]

maintainers = [
    {name = "Danil Kovalev"}
]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Osint Tools",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
    "aiofiles==23.2.1",
    "aiogram==3.2.0",
    "aiohttp==3.9.1",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "beautifulsoup4==4.12.2",
    "branca==0.7.0",
    "bs4==0.0.1",
    "certifi==2023.11.17",
    "chardet==3.0.4",
    "charset-normalizer==3.3.2",
    "environs==10.0.0",
    "exif==1.6.0",
    "fake-useragent==1.4.0",
    "folium==0.15.1",
    "frozenlist==1.4.1",
    "googletrans",
    "h11==0.9.0",
    "h2==3.2.0",
    "hpack==3.0.0",
    "hstspreload==2023.1.1",
    "httpcore",
    "httpx",
    "hyperframe",
    "idna==3.6",
    "Jinja2==3.1.2",
    "lxml==4.9.3",
    "magic-filter==1.0.12",
    "MarkupSafe==2.1.3",
    "marshmallow==3.20.1",
    "multidict==6.0.4",
    "numpy==1.26.2",
    "packaging==23.2",
    "phonenumbers==8.13.26",
    "plum-py==0.8.7",
    "pydantic==2.5.2",
    "pydantic_core==2.14.5",
    "PyPDF2==3.0.1",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "rfc3986==1.5.0",
    "sniffio==1.3.0",
    "soupsieve==2.5",
    "typing_extensions==4.7.1",
    "urllib3==2.1.0",
    "xyzservices==2023.10.1",
    "yarl==1.9.4",
    "holehe",
    "wheel"
]

[project.urls]
Repository = "https://github.com/C3EQUALZz/TeleOSinter"
"Bug Tracker" = "https://github.com/C3EQUALZz/TeleOSinter/issues"

[options.extras_require]
testing = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=0.910",
    "flake8>=3.9",
    "tox>=3.24",
    "pytest-mock",
    "pytest-asyncio",
    "mypy"
]

[options.package_data]
core = "py.typed"

[flake8]
max-line-length = 160

[tool.pytest.ini_options]
addopts = "--cov=core"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
strict = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
namespace_packages = true
explicit_package_bases = true



