[metadata]
name = teleosinter

description = Osint tool for finding information about different persons. This tool uses other ready-made projects.

license = GNU GENERAL PUBLIC

license_file = LICENSE

platforms = unix, linux, osx, cygwin, win32

classifiers =
    "Intended Audience :: Developers",
    "Topic :: Osint Tools",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only"

